<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">艺论</string>
    
    <!-- 登录 -->
    <string name="zc">注册</string>
    <string name="dl">登录</string>
    <string name="qsrndzh">请输入您的账号</string>
    <string name="qsrndmm">请输入您的密码</string>
    <string name="qsrndsjh">请输入手机号</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="ljzc">立即注册</string>
    <string name="wjmm"><u>忘记密码?</u></string>
    <string name="kjfsdl">快捷方式登录</string>
    <string name="xyb">下一步</string>
    <string name="szmm">设置密码</string>
    <string name="qrmm">确认密码</string>
    
    <!-- 注册 -->
    <string name="tj">提交</string>
    <string name="tx">头像</string>
    <string name="nc">昵称</string>
    <string name="xb">性别</string>
    <string name="wz">位置</string>
    <string name="bt">必填</string>
    <string name="qsrnc">请输入昵称</string>
    <string name="wc">完成</string>
    
    <!-- 个人中心 -->
    <string name="grzx">个人中心</string>
    <string name="xy">信用</string>
    <string name="gm">购买</string>
    <string name="mc">卖出</string>
    <string name="fs">粉丝</string>
    <string name="grzl">个人资料</string>
    <string name="xc">相册</string>
    <string name="qb">钱包</string>
    <string name="zjhmdfs">专家&#160;&#160;黑名单&#160;&#160;粉丝</string>
    <string name="cy">常用</string>
    <string name="sz">设置</string>
    <string name="sqrz">申请认证</string>
    <string name="ndcx">年代查询</string>
    <string name="jgcx">价格查询</string>
    <string name="kdcx">快递查询</string>
    <string name="xgntnd">新功能，听您的</string>
    <string name="qm">签名</string>
    <string name="sjh">手机号</string>
    <string name="ggcnxhdnc">更改成你喜欢的昵称</string>
    
    
    <!-- 圈子 -->
    <string name="zan">赞</string>
    <string name="pl">评论</string>
    <string name="zf">转发</string>
    <string name="ts">投诉</string>
    <string name="xxxsd">写下想说的</string>
    <string name="qrsc">确认上传</string>
    <string name="xzbqhfb">选择标签后发布，大家将会在此标签中看到你发布的内容哦~</string>
    <string name="dd">当代</string>
    <string name="jxd">近现代</string>
    <string name="gd">古代</string>
    <string name="pz">拍照</string>
    <string name="tp">图片</string>
    <string name="wz2">文字</string>
    <string name="yl2">预览</string>
    <string name="qxztsyy">请选择投诉原因</string>
    <string name="qnfdtpbtqc">亲，您发的图片不太清楚</string>
    <string name="fdyl">反动言论</string>
    <string name="sq">色情</string>
    <string name="la">拉黑</string>
    <string name="qrtj">确认提交</string>
    <string name="xgbz">修改备注</string>
    <string name="sj">手机</string>
    <string name="yx">邮箱</string>
    <string name="pb">屏蔽</string>
    <string name="swzj">设为专家</string>
    <string name="fsxx">发送消息</string>
    <string name="fs2">发送</string>
    <string name="xsqb">显示全部</string>
    
    <!-- 艺论 -->
    <string name="yl">艺论</string>
    <string name="sjtj">数据统计</string>
    <string name="wlgz">我来估值</string>
    <string name="wypf">我要评分</string>
    <string name="djlk">大家来看</string>
    <string name="yl_gm">购买:</string>
    <string name="yl_mc">卖出:</string>
    <string name="yl_xy">信用:</string>
    <string name="yl_fs">粉丝:</string>
    <string name="yl_hf">回复</string>
    <string name="zjsp">直接上拍</string>
    <string name="zd12z">最多12张...</string>
    <string name="zz">作者：</string>
    <string name="srzzmc">输入作者名字</string>
    <string name="bx">不详</string>
    <string name="wk">无款</string>
    <string name="zd">质地：</string>
    <string name="srzd">输入质地</string>
    <string name="zb">纸本</string>
    <string name="jb">绢本</string>
    <string name="lb">绫本</string>
    <string name="cc">尺寸：</string>
    <string name="srcd">输入长度</string>
    <string name="srkd">输入宽度</string>
    <string name="cm">cm</string>
    <string name="ch">x</string>
    <string name="xq">详情：</string>
    <string name="srxq">输入详情</string>
    <string name="bwbty">不，我不同意</string>
    <string name="swyjydbqr">是，我已经阅读并确认</string>
    <string name="bcxzf">本次需支付</string>
    <string name="qcz">去充值</string>
    <string name="wzklyx">我再考虑一下</string>
    <string name="xzczje">选择充值金额</string>
    <string name="ssy">30</string>
    <string name="wsy">50</string>
    <string name="yby">100</string>
    <string name="lby">200</string>
    <string name="sby">300</string>
    <string name="wby">500</string>
    <string name="zdyje">自定义金额：</string>
    <string name="srje">输入金额</string>
    <string name="xzzffs">选择支付方式</string>
    <string name="wxzf">微信支付</string>
    <string name="zfbzf">支付宝支付</string>
    <string name="ylzf">银联支付</string>
    <string name="czcg">充值成功</string>
    <string name="zfcg">支付成功</string>
    <string name="qwzfymwczf">前往支付页面，完成支付</string>
    <string name="tgdjylh">通过大家议论后,我们会给您发送推送消息，告知您！</string>
    <string name="qzf">去支付</string>
    <string name="qpj">起拍价：</string>
    <string name="yuan">元</string>
    <string name="djkqxzjsp">点击可取消直接上拍</string>
    <string name="hddf">滑动打分</string>
    <string name="fen">分</string>
    <string name="zelo">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="onesw">10-20万</string>
    <string name="twosw">20-30万</string>
    <string name="threesw">30-40万</string>
    <string name="foursw">40-50万</string>
    <string name="fivesw">50-60万</string>
    <string name="sixsw">60-70万</string>
    <string name="sevensw">70-80万</string>
    <string name="eightsw">80-90万</string>
    <string name="ninesw">90-100万</string>
    <string name="tenupsw">100万以上</string>
    <string name="onew">1-2万</string>
    <string name="twow">2-3万</string>
    <string name="threew">3-4万</string>
    <string name="fourw">4-5万</string>
    <string name="fivew">5-6万</string>
    <string name="sixw">6-7万</string>
    <string name="sevenw">7-8万</string>
    <string name="eightw">8-9万</string>
    <string name="ninew">9-10万</string>
    <string name="onedownq">1千以下</string>
     <string name="oneq">1-2千</string>
    <string name="twoq">2-3千</string>
    <string name="threeq">3-4千</string>
    <string name="fourq">4-5千</string>
    <string name="fiveq">5-6千</string>
    <string name="sixq">6-7千</string>
    <string name="sevenq">7-8千</string>
    <string name="eightq">8-9千</string>
    <string name="nineq">9千-1万</string>
    <string name="zdy">自定义：</string>
    <string name="srgzje">输入估值金额</string>
    <string name="ggsr">广告骚扰</string>
    <string name="zzmg">政治敏感</string>
    <string name="sqds">色情低俗</string>
    <string name="lhpb">拉黑屏蔽</string>
    <string name="qzpq">欺诈骗钱</string>
    <string name="wf">违法（暴力恐怖、违禁品等）</string>
    <string name="qtwtms">其他问题描述</string>
    
    <!-- 拍卖 -->
    <string name="mqj">目前价:￥</string>
    <string name="jyk">加一口</string>
    
    <!-- 消息 -->
    <string name="ss">搜索</string>
    <string name="xdpy">新的朋友</string>
    <string name="jjxpy">结交新朋友</string>
    <string name="tjdv">推荐大V</string>
    <string name="xx_gm">购买:</string>
    <string name="xx_mc">卖出:</string>
    <string name="xx_xy">信用:</string>
    <string name="xx_fs">粉丝:</string>
    <string name="ylpy">艺论朋友</string>
    <string name="rsylyh">认识艺论用户</string>
    <string name="txlhy">通讯录好友</string>
    <string name="yqtxlhy">要求通讯录好友</string>
    <string name="mjph">卖家排行</string>
    <string name="mjph2">买家排行</string>
    <string name="pjph">评价排行</string>
    <string name="fsph">粉丝排行</string>
    <string name="hl">忽略</string>
    <string name="jrhmd">加入黑名单</string>
    <string name="tgyz">通过验证</string>
    <string name="lt_tp">图片</string>
    <string name="lt_zz">转账</string>
    <string name="lt_wz">位置</string>
    
    <!-- 选择位置弹出框 -->
    <string name="xzwz">选择位置</string>
    <string name="qx">取消</string> 
    <string name="qd">确定</string>
    

    <!-- 下拉刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_normal2">没有更多的数据</string>
    <string name="xlistview_footer_hint_ready">松开加载</string>
    <string name="xlistview_footer_hint_loading">正在加载...</string>

    <!-- 微信回调 -->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    
    <string name="xx">消息</string>
    <string name="qz">圈子</string>
    <string name="pm">拍卖</string>
	<string name="gr">个人</string>
</resources>